// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Team Member block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-team-member ugb-team-member ugb-team-member--v2 ugb-team-member--columns-1 ugb-team-member--image-shapes ugb-team-member--design-design className"
>
  <div
    className="ugb-team-member__item ugb--shadow-1"
    style={
      Object {
        "borderRadius": 6,
      }
    }
  >
    <div
      className="ugb-team-member__image"
      data-src="mediaURL1"
      style={
        Object {
          "backgroundImage": "url(mediaURL1)",
        }
      }
    />
    <div
      className="ugb-team-member__content"
    >
      <h4
        className="ugb-team-member__name"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "name1",
            }
          }
        />
      </h4>
      <p
        className="ugb-team-member__position"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "position1",
            }
          }
        />
      </p>
      <p
        className="ugb-team-member__description"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "description1",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`Team Member block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-team-member ugb-team-member ugb-team-member--v2 ugb-team-member--columns-2 ugb-team-member--image-circle ugb-team-member--design-basic"
>
  <div
    className="ugb-team-member__item"
    style={
      Object {
        "borderRadius": undefined,
      }
    }
  >
    
    <div
      className="ugb-team-member__content"
    >
      <h4
        className="ugb-team-member__name"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Name",
            }
          }
        />
      </h4>
      <p
        className="ugb-team-member__position"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Position",
            }
          }
        />
      </p>
      <p
        className="ugb-team-member__description"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block.",
            }
          }
        />
      </p>
    </div>
  </div>
  <div
    className="ugb-team-member__item"
    style={
      Object {
        "borderRadius": undefined,
      }
    }
  >
    
    <div
      className="ugb-team-member__content"
    >
      <h4
        className="ugb-team-member__name"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Name",
            }
          }
        />
      </h4>
      <p
        className="ugb-team-member__position"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Position",
            }
          }
        />
      </p>
      <p
        className="ugb-team-member__description"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block.",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;
